# guardrail_demo

./: .gitignore  full_eval_report.html  guardrails-ado-tasks.md  setup.md
bankbuddy/: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml
bankbuddy/docs/: adding-a-new-agent-provider.md  adding-a-new-auth-provider.md  architecture.md  cloud-portability.md  design-principles.md  guardrails.md  security-boundaries.md
bankbuddy/infra/: README.md
bankbuddy/policies/: bankbuddy-default.yaml  bankbuddy-default_old.yaml.bak
bankbuddy/shared/: README.md  pyproject.toml  requirements.txt
bankbuddy/shared/bankbuddy_shared/: __init__.py
bankbuddy/shared/bankbuddy_shared/contracts/: __init__.py  agent.py  chat.py  guardrails.py  principal.py
bankbuddy/shared/bankbuddy_shared/interfaces/: __init__.py  agent.py  auth.py  banking.py  guardrails.py  llm.py  secrets.py  session.py  telemetry.py
bankbuddy/tests/: README.md  smoke_chat.ps1  smoke_guardrails.py  test_guardrails.py
bankbuddy/tools/: refresh-aad-token.ps1
deploy/: .gitignore  README.md
deploy/bicep/: main.bicep  main.json  main.parameters.json
docs/: demo-narration-script.md  demo-script.md  guardrails-code-implementation.md  guardrails-implementation-plan.md  guardrails-opensource-cloud-agnostic.md  guardrails-presentation.md  guardrails-sdks-and-architecture.md  guardrails-summary-review.md  guardrails-team-qa.md  guardrails-workitems-detailed.md  test-results-full-suite.md
guardrails-service/: .env.example  Dockerfile  EVALUATION.md  README.md  eval.env  requirements.txt
(+146 files in other folders)
