[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bankbuddy-shared"
version = "0.1.0"
description = "BankBuddy shared interfaces and DTOs"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["bankbuddy_shared*"]
